--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.1.0
+  mobile_scanner: ^4.0.1
+  http: ^1.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
